--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,4 +10,4 @@ workflows:
       # first get the source code and install npm dependencies
       - cypress/install
       - cypress/run:
-          record: true
+          record: false
