--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^6.1.2",
-    "cypress-localstorage-commands": "^1.6.1"
+    "cypress-localstorage-commands": "^1.6.1",
+    "typescript": "^4.7.2"
   }
 }
