--- a/package.json
+++ b/package.json
@@ -21,11 +21,9 @@
     "url": "https://github.com/joseAlexis/cypress-node-oop/issues"
   },
   "homepage": "https://github.com/joseAlexis/cypress-node-oop#readme",
-  "dependencies": {
-    "cypress": "^9.4.1"
-  },
   "devDependencies": {
     "@faker-js/faker": "^6.1.2",
+    "cypress": "^10.3.0",
     "cypress-localstorage-commands": "^1.6.1",
     "typescript": "^4.7.2"
   }
