--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "format:check": "prettier --check .",
     "format:write": "prettier --write .",
     "lint:check": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,8 @@
     "cypress-localstorage-commands": "^1.6.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-cypress": "^2.15.1",
+    "husky": "^9.0.11",
     "prettier": "^3.2.5",
     "typescript": "^5.4.2"
   }
