--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,5 +10,12 @@
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint", "cypress"],
-  "rules": {}
+  "rules": {
+    "cypress/no-assigning-return-values": "error",
+    "cypress/no-unnecessary-waiting": "error",
+    "cypress/assertion-before-screenshot": "warn",
+    "cypress/no-force": "warn",
+    "cypress/no-async-tests": "error",
+    "cypress/no-pause": "error"
+  }
 }
